--- a/ChangeDetection/package.json
+++ b/ChangeDetection/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "first-project",
+  "name": "change-detection",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:first-project": "node dist/first-project/server/server.mjs"
+    "serve:ssr:ChangeDetection": "node dist/change-detection/server/server.mjs"
   },
   "private": true,
   "dependencies": {
